[package]
name = "ledger-plot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
futures = "0.3.29"
ledger-parser = "5.1.1"
map-macro = "0.2.6"
plotters = "0.3.5"
rust_decimal = "1.32.0"
tokio = { version = "1.33.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
